# canvasflow

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_users_table.py
backend/src/canvasflow/: config.py  database.py  main.py  storage.py
backend/src/canvasflow/auth/: middleware.py  rate_limiter.py  router.py  schemas.py  service.py
backend/src/canvasflow/models/: __init__.py  canvas.py  image.py  message.py  tool_call.py  user.py
backend/src/canvasflow/routers/: canvas.py  chat.py  storage.py  upload.py
backend/src/canvasflow/services/: agent.py  image.py  stream.py
backend/src/canvasflow/tools/: __init__.py  edit.py  generate.py
frontend/: CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChangePasswordModal.css  ChangePasswordModal.tsx  ChatInterface.css  ChatInterface.tsx  ExcalidrawCanvas.css  ExcalidrawCanvas.tsx  HomePage.css  HomePage.tsx  LoginPage.css  LoginPage.tsx  UserMenu.css  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx
site/: CLAUDE.md  astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
specs/: doubao.md  image-generation-design.md  image-generation.md  polystudio-architecture.md
(+38 files in other folders)
